# blame8

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pre-commit-config.yaml  pyproject.toml  setup.py
blame8/: client.py
blame8.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
