[tool.poetry]
name = "blame8"
version = "0.0.2"
description = "Good at blaming people"
authors = ["Fridolin Kerner <fridolin.kerner@gmx.de>, Christoph Ratay <rataychristoph@gmail.com>"]
readme = "README.md"

# Disable package mode
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
black = "^24.10.0"
flake8 = "^7.1.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
